post install/update scripts to combine source
Php config must allow for phar creation, eg : `/etc/php.ini` must have 
```ini
[Phar]
; http://php.net/phar.readonly
phar.readonly = Off
```

--- a/composer.json
+++ b/composer.json
@@ -22,5 +22,9 @@
 	    "files": [
             "vendor/redbeanphp/rb.php"
 	    ]
-	}
+	},
+    "scripts": {
+        "post-install-cmd": "cd vendor/redbeanphp && php replica2.php",
+        "post-update-cmd": "cd vendor/redbeanphp && php replica2.php"
+    }
 }
