Add "prefer-stable": true

--- a/composer.json
+++ b/composer.json
@@ -23,5 +23,6 @@
             "vendor/redbeanphp/rb.php"
 	    ]
 	},
-	"minimum-stability": "dev"
+	"minimum-stability": "dev",
+	"prefer-stable": true
 }
